scribble-test/src/test/resources/good/misc/globals/grecursion/Recursion02.scr
module good.misc.globals.grecursion.Recursion02;


global protocol Recursion2(role A, role B)
{
	rec X
	{
		l1() from A to B;  // Comment is OK
	}
}

