scribble-test/src/test/resources/bad/syntax/disamb/globals/gprotocoldecl/GProtocolDecl02.scr
module bad.syntax.disamb.globals.gprotocoldecl.GProtocolDecl02;


global protocol GProtocolDecl2(role A, role B, role C)
{
	1() from A to B;
}
